--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10023,7 +10023,7 @@ body {
 .cid-r9j1XYj75m {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-image: url("../../../assets/images/mbr-24-1920x1280.jpg");
+  background-image: url("../../../assets/images/mbr-2-1920x1279.jpg");
 }
 .cid-r9j1XYj75m B {
   color: #ffffff;
@@ -10053,7 +10053,50 @@ body {
 .cid-rjRtoMvZyM {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-1920x1269.jpg");
+  background-image: url("../../../assets/images/mbr-25-1920x1280.jpg");
+}
+.cid-rYu34fDiNy {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rYu34fDiNy h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rYu34fDiNy p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rYu34fDiNy .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rYu34fDiNy .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rYu34fDiNy .mbr-text {
+  color: #767676;
+}
+.cid-rYu34fDiNy .card-wrapper {
+  height: 100%;
+  background: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-rYu34fDiNy .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rYu34fDiNy .mbr-text,
+.cid-rYu34fDiNy .mbr-section-btn {
+  text-align: center;
+  color: #000000;
+}
+.cid-rYu34fDiNy .card-title {
+  text-align: center;
 }
 .cid-rNJjfEbpjM {
   padding-top: 45px;
@@ -10080,7 +10123,7 @@ body {
 .cid-rjRptN0Bf7 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-20-1920x1280.jpg");
+  background-image: url("../../../assets/images/mbr-3-1920x1080.jpg");
 }
 .cid-raV1R9RGkC {
   padding-top: 45px;
@@ -10107,7 +10150,7 @@ body {
 .cid-rGLWqvIcYA {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-1-1920x1279.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1275.jpg");
 }
 .cid-rGLWsWOMju {
   padding-top: 0px;
@@ -10135,7 +10178,7 @@ body {
 .cid-rGLY7KMAdJ {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-21-1920x1280.jpg");
+  background-image: url("../../../assets/images/222222222222-640x640.jpg");
 }
 .cid-rVoJyv3vhU {
   padding-top: 0px;
@@ -10163,7 +10206,7 @@ body {
 .cid-rVoM4hqeI3 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-23-1920x1280.jpg");
+  background-image: url("../../../assets/images/mbr-26-1920x1280.jpg");
 }
 .cid-rVoM4HTZFI {
   padding-top: 0px;
@@ -10191,7 +10234,7 @@ body {
 .cid-rVoJxrUPGg {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-1920x1262.jpg");
+  background-image: url("../../../assets/images/red-velvet-waffles-1-800x800.jpg");
 }
 .cid-rVoICw8tTi {
   padding-top: 0px;
@@ -10219,7 +10262,7 @@ body {
 .cid-rGLYOY4Adu {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/0220-french-onion-soup-single-lede-1028x578.jpg");
+  background-image: url("../../../assets/images/photo-1533237264985-ee62f6d342bb-1350x901.jpg");
 }
 .cid-rGLYQfhJ8b {
   padding-top: 45px;
@@ -10247,7 +10290,7 @@ body {
 .cid-rS7HXKkrrP {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/d54-dsc2969-1280x853.jpg");
+  background-image: url("../../../assets/images/mbr-27-1920x1280.jpg");
 }
 .cid-rS7HZYy2li {
   padding-top: 45px;
@@ -10275,49 +10318,6 @@ body {
   padding-top: 90px;
   padding-bottom: 75px;
   background-image: url("../../../assets/images/20191204-123414-2000x1125.jpg");
-}
-.cid-rVoNSlrJ0t {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rVoNSlrJ0t h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rVoNSlrJ0t p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-  padding-top: 2rem;
-}
-.cid-rVoNSlrJ0t .mbr-section-btn {
-  padding-top: 2.5rem;
-}
-.cid-rVoNSlrJ0t .mbr-section-btn a {
-  margin: 0;
-}
-.cid-rVoNSlrJ0t .mbr-text {
-  color: #767676;
-}
-.cid-rVoNSlrJ0t .card-wrapper {
-  height: 100%;
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-rVoNSlrJ0t .card:not(.last-child) {
-    padding-bottom: 2rem;
-  }
-}
-.cid-rVoNSlrJ0t .mbr-text,
-.cid-rVoNSlrJ0t .mbr-section-btn {
-  text-align: center;
-  color: #000000;
-}
-.cid-rVoNSlrJ0t .card-title {
-  text-align: center;
 }
 .cid-rGLZiFynfr {
   padding-top: 0px;
