create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9915,7 +9915,7 @@ body {
 .cid-r9j1XYj75m {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-image: url("../../../assets/images/mbr-2-1920x1279.jpg");
+  background-image: url("../../../assets/images/mbr-1280x960.jpg");
 }
 .cid-r9j1XYj75m B {
   color: #ffffff;
@@ -9923,75 +9923,20 @@ body {
 .cid-r9j1XYj75m H3 {
   color: #ffffff;
 }
-.cid-rGLUGiirC6 {
+.cid-s4q7JcR9aP {
   padding-top: 45px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rGLUGiirC6 .mbr-text,
-.cid-rGLUGiirC6 blockquote {
-  color: #767676;
-}
-.cid-rGLUGiirC6 .mbr-text B {
-  color: #000000;
-}
-.cid-rGLUGiirC6 .mbr-text {
-  color: #000000;
-  text-align: left;
-}
-.cid-rGLUGiirC6 .mbr-text DIV {
-  text-align: left;
-}
-.cid-rjRtoMvZyM {
-  padding-top: 90px;
-  padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-25-1920x1280.jpg");
-}
-.cid-rYu34fDiNy {
-  padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rYu34fDiNy h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rYu34fDiNy p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-  padding-top: 2rem;
-}
-.cid-rYu34fDiNy .mbr-section-btn {
-  padding-top: 2.5rem;
-}
-.cid-rYu34fDiNy .mbr-section-btn a {
-  margin: 0;
-}
-.cid-rYu34fDiNy .mbr-text {
+.cid-s4q7JcR9aP P {
   color: #767676;
 }
-.cid-rYu34fDiNy .card-wrapper {
-  height: 100%;
-  background: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-rYu34fDiNy .card:not(.last-child) {
-    padding-bottom: 2rem;
-  }
-}
-.cid-rYu34fDiNy .mbr-text,
-.cid-rYu34fDiNy .mbr-section-btn {
-  text-align: center;
-  color: #000000;
-}
-.cid-rYu34fDiNy .card-title {
-  text-align: center;
+.cid-s4q7JcR9aP .mbr-text,
+.cid-s4q7JcR9aP .mbr-section-btn {
+  color: #232323;
 }
 .cid-rNJjfEbpjM {
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -10015,7 +9960,7 @@ body {
 .cid-rjRptN0Bf7 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-3-1920x1080.jpg");
+  background-image: url("../../../assets/images/unnamed-1-512x341.png");
 }
 .cid-raV1R9RGkC {
   padding-top: 45px;
@@ -10070,7 +10015,7 @@ body {
 .cid-rGLY7KMAdJ {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/222222222222-640x640.jpg");
+  background-image: url("../../../assets/images/unnamed-1-512x384.jpg");
 }
 .cid-rVoJyv3vhU {
   padding-top: 0px;
@@ -10098,7 +10043,7 @@ body {
 .cid-rVoM4hqeI3 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-26-1920x1280.jpg");
+  background-image: url("../../../assets/images/unnamed-3-512x341.png");
 }
 .cid-rVoM4HTZFI {
   padding-top: 0px;
@@ -10154,7 +10099,7 @@ body {
 .cid-rGLYOY4Adu {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/photo-1533237264985-ee62f6d342bb-1350x901.jpg");
+  background-image: url("../../../assets/images/unnamed-4-512x342.png");
 }
 .cid-rGLYQfhJ8b {
   padding-top: 45px;
@@ -10176,61 +10121,6 @@ body {
   text-align: center;
 }
 .cid-rGLYQfhJ8b .mbr-text P {
-  text-align: left;
-  color: #000000;
-}
-.cid-rS7HXKkrrP {
-  padding-top: 90px;
-  padding-bottom: 75px;
-  background-image: url("../../../assets/images/mbr-27-1920x1280.jpg");
-}
-.cid-rS7HZYy2li {
-  padding-top: 45px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rS7HZYy2li .mbr-text,
-.cid-rS7HZYy2li blockquote {
-  color: #767676;
-}
-.cid-rS7HZYy2li .mbr-text B {
-  color: #000000;
-}
-.cid-rS7HZYy2li .mbr-text {
-  color: #000000;
-  text-align: left;
-}
-.cid-rS7HZYy2li .mbr-text DIV {
-  text-align: left;
-}
-.cid-rS7HZYy2li .mbr-text P {
-  text-align: left;
-}
-.cid-rGLZ4YErtg {
-  padding-top: 90px;
-  padding-bottom: 75px;
-  background-image: url("../../../assets/images/20191204-123414-2000x1125.jpg");
-}
-.cid-rGLZiFynfr {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rGLZiFynfr .mbr-text,
-.cid-rGLZiFynfr blockquote {
-  color: #767676;
-}
-.cid-rGLZiFynfr .mbr-text B {
-  color: #000000;
-}
-.cid-rGLZiFynfr .mbr-text {
-  color: #000000;
-  text-align: left;
-}
-.cid-rGLZiFynfr .mbr-text DIV {
-  text-align: center;
-}
-.cid-rGLZiFynfr .mbr-text P {
   text-align: left;
   color: #000000;
 }
