create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9915,7 +9915,7 @@ body {
 .cid-r9j1XYj75m {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-image: url("../../../assets/images/mbr-1280x960.jpg");
+  background-image: url("../../../assets/images/mbr-4-1920x1279.jpg");
 }
 .cid-r9j1XYj75m B {
   color: #ffffff;
@@ -9923,20 +9923,51 @@ body {
 .cid-r9j1XYj75m H3 {
   color: #ffffff;
 }
-.cid-s4q7JcR9aP {
-  padding-top: 45px;
+.cid-s6QapYM2ZU {
+  padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-s4q7JcR9aP P {
+.cid-s6QapYM2ZU h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-s6QapYM2ZU p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-s6QapYM2ZU .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-s6QapYM2ZU .mbr-section-btn a {
+  margin: 0;
+}
+.cid-s6QapYM2ZU .mbr-text {
   color: #767676;
 }
-.cid-s4q7JcR9aP .mbr-text,
-.cid-s4q7JcR9aP .mbr-section-btn {
-  color: #232323;
+.cid-s6QapYM2ZU .card-wrapper {
+  height: 100%;
+  background: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s6QapYM2ZU .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-s6QapYM2ZU .mbr-text,
+.cid-s6QapYM2ZU .mbr-section-btn {
+  text-align: center;
+  color: #000000;
+}
+.cid-s6QapYM2ZU .card-title {
+  text-align: center;
 }
 .cid-rNJjfEbpjM {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
@@ -9960,7 +9991,7 @@ body {
 .cid-rjRptN0Bf7 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/unnamed-1-512x341.png");
+  background-image: url("../../../assets/images/02cafhgclcu6qsnaqgurfl2-6.v-1569470612-810x456.jpg");
 }
 .cid-raV1R9RGkC {
   padding-top: 45px;
@@ -9991,7 +10022,7 @@ body {
 }
 .cid-rGLWsWOMju {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rGLWsWOMju .mbr-text,
@@ -10015,11 +10046,11 @@ body {
 .cid-rGLY7KMAdJ {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/unnamed-1-512x384.jpg");
+  background-image: url("../../../assets/images/mbr-6-1920x1281.jpg");
 }
 .cid-rVoJyv3vhU {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rVoJyv3vhU .mbr-text,
@@ -10043,11 +10074,32 @@ body {
 .cid-rVoM4hqeI3 {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/unnamed-3-512x341.png");
+  background-image: url("../../../assets/images/mbr-1920x719.jpg");
+}
+.cid-s6QdIe4tQ3 {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 0px;
+}
+.cid-s6QdIe4tQ3 .image-block {
+  margin: auto;
+}
+.cid-s6QdIe4tQ3 figcaption {
+  position: relative;
+}
+.cid-s6QdIe4tQ3 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s6QdIe4tQ3 .image-block {
+    width: 100% !important;
+  }
 }
 .cid-rVoM4HTZFI {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rVoM4HTZFI .mbr-text,
@@ -10071,35 +10123,33 @@ body {
 .cid-rVoJxrUPGg {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/red-velvet-waffles-1-800x800.jpg");
+  background-image: url("../../../assets/images/mbr-31-1920x1280.jpg");
 }
-.cid-rVoICw8tTi {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-s6QcLy6f0f {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.cid-rVoICw8tTi .mbr-text,
-.cid-rVoICw8tTi blockquote {
-  color: #767676;
+.cid-s6QcLy6f0f .image-block {
+  margin: auto;
 }
-.cid-rVoICw8tTi .mbr-text B {
-  color: #000000;
+.cid-s6QcLy6f0f figcaption {
+  position: relative;
 }
-.cid-rVoICw8tTi .mbr-text {
-  color: #000000;
-  text-align: left;
+.cid-s6QcLy6f0f figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
-.cid-rVoICw8tTi .mbr-text DIV {
-  text-align: center;
-}
-.cid-rVoICw8tTi .mbr-text P {
-  text-align: left;
-  color: #000000;
+@media (max-width: 768px) {
+  .cid-s6QcLy6f0f .image-block {
+    width: 100% !important;
+  }
 }
 .cid-rGLYOY4Adu {
   padding-top: 90px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/unnamed-4-512x342.png");
+  background-image: url("../../../assets/images/4-599x449.jpg");
 }
 .cid-rGLYQfhJ8b {
   padding-top: 45px;
@@ -11546,6 +11596,514 @@ body {
   color: #000000;
 }
 .cid-r6PqlKxt5H {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #1ea416;
+}
+.cid-rixa0Ce5sG .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rixa0Ce5sG .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rixa0Ce5sG a {
+  font-style: normal;
+}
+.cid-rixa0Ce5sG .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rixa0Ce5sG .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rixa0Ce5sG .nav-item:focus,
+.cid-rixa0Ce5sG .nav-link:focus {
+  outline: none;
+}
+.cid-rixa0Ce5sG .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rixa0Ce5sG .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rixa0Ce5sG .menu-logo {
+  margin-right: auto;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-rixa0Ce5sG .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rixa0Ce5sG .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rixa0Ce5sG .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rixa0Ce5sG .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rixa0Ce5sG .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rixa0Ce5sG .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rixa0Ce5sG .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rixa0Ce5sG .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rixa0Ce5sG .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rixa0Ce5sG .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rixa0Ce5sG .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rixa0Ce5sG .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rixa0Ce5sG button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rixa0Ce5sG button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rixa0Ce5sG button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-rixa0Ce5sG button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rixa0Ce5sG button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rixa0Ce5sG button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rixa0Ce5sG button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rixa0Ce5sG nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rixa0Ce5sG nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rixa0Ce5sG nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rixa0Ce5sG nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rixa0Ce5sG .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rixa0Ce5sG .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rixa0Ce5sG .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rixa0Ce5sG .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rixa0Ce5sG .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rixa0Ce5sG .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rixa0Ce5sG .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rixa0Ce5sG .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rixa0Ce5sG .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rixa0Ce5sG.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rixa0Ce5sG img {
+    height: 3.8rem !important;
+  }
+  .cid-rixa0Ce5sG .btn {
+    display: -webkit-flex;
+  }
+  .cid-rixa0Ce5sG button.navbar-toggler {
+    display: block;
+  }
+  .cid-rixa0Ce5sG .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rixa0Ce5sG .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing,
+  .cid-rixa0Ce5sG .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing .navbar-nav,
+  .cid-rixa0Ce5sG .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rixa0Ce5sG .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rixa0Ce5sG .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rixa0Ce5sG .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rixa0Ce5sG .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rixa0Ce5sG .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rixa0Ce5sG .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rixa0Ce5sG .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rixa0Ce5sG .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rixa0Ce5sG .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rixa0Ce5sG .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rixa0Ce5sG .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rixa0Ce5sG .nav-link:hover,
+.cid-rixa0Ce5sG .dropdown-item:hover {
+  color: #19ca0f !important;
+}
+.cid-r6QgeW9ZBr {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QgeW9ZBr H2 {
+  color: #ffffff;
+}
+.cid-r6Qgfj6dvK {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qgfj6dvK H2 {
+  color: #ffffff;
+}
+.cid-rkCA4eI2aJ {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rkCA4eI2aJ .mbr-text,
+.cid-rkCA4eI2aJ blockquote {
+  color: #767676;
+}
+.cid-rkCA4eI2aJ .mbr-text B {
+  color: #000000;
+}
+.cid-rkCA4eI2aJ .mbr-text {
+  color: #000000;
+}
+.cid-rkCA4AsFV7 {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rkCA4AsFV7 .title {
+  margin-bottom: 2rem;
+}
+.cid-rkCA4AsFV7 .mbr-section-subtitle {
+  color: #000000;
+}
+.cid-rkCA4AsFV7 a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rkCA4AsFV7 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rkCA4AsFV7 .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-rkCA4AsFV7 .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-rkCA4AsFV7 LABEL {
+  color: #000000;
+}
+.cid-rkCA4AsFV7 H2 {
+  color: #000000;
+}
+.cid-rkCA4AsFV7 B {
+  color: #000000;
+}
+.cid-s6Q5KC1b1w {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-s6Q5KC1b1w H2 {
+  color: #ffffff;
+}
+.cid-s6Q6gJdZx5 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s6Q6gJdZx5 .mbr-text,
+.cid-s6Q6gJdZx5 blockquote {
+  color: #767676;
+}
+.cid-s6Q6gJdZx5 .mbr-text B {
+  color: #000000;
+}
+.cid-s6Q6gJdZx5 .mbr-text {
+  color: #000000;
+  text-align: center;
+}
+.cid-s6Q6gJdZx5 .mbr-text DIV {
+  text-align: center;
+}
+.cid-s6Q6hkHzmw {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s6Q6hkHzmw P {
+  color: #767676;
+}
+.cid-s6Q6hkHzmw .mbr-text,
+.cid-s6Q6hkHzmw .mbr-section-btn {
+  color: #000000;
+}
+.cid-r6Pqzhh3by {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #1ea416;
